<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c4d0e5"
        android:baselineAligned="false"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/listItemHeader"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/install_header"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/app_name"
            style="@style/textview_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c4d0e5"
        android:baselineAligned="false"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/common_table_label"
            android:gravity="center"
            android:text="@string/packagelabel"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c4d0e5"
            android:baselineAligned="false"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/app_package"
            style="@style/textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c4d0e5"
        android:baselineAligned="false"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/common_table_label"
            android:gravity="center"
            android:text="@string/scan"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c4d0e5"
            android:baselineAligned="false"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="8"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/app_permission_desc"
                style="@style/textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_search" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/btn_delete" />

                <TextView
                    android:id="@+id/app_permission_hidden"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/app_package_value"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c4d0e5"
        android:baselineAligned="false"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10" >

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/common_table_label" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/common_table_label"
            android:gravity="center"
            android:text="@string/install"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c4d0e5"
            android:baselineAligned="false"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/installTime"
            style="@style/textview_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c4d0e5"
            android:baselineAligned="false"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/common_table_label"
            android:gravity="center"
            android:text="@string/update"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c4d0e5"
            android:baselineAligned="false"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/updateTime"
            style="@style/textview_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c4d0e5"
        android:baselineAligned="false"
        android:orientation="horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>